@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.4 2002/12/08 12:44:13 cjep Exp $
+$NetBSD: distinfo,v 1.5 2002/12/30 18:14:26 cjep Exp $
 
-SHA1 (leafnode-1.9.30.rel.tar.bz2) = bd1af03287e623e82e496e8ef35169bb531f3b6c
-Size (leafnode-1.9.30.rel.tar.bz2) = 623456 bytes
+SHA1 (leafnode-1.9.31.rel.tar.bz2) = b9502e3ed55dcb1576a1561313510569ff674865
+Size (leafnode-1.9.31.rel.tar.bz2) = 610454 bytes
 SHA1 (patch-aa) = d1aa900eb9040f8810afd7dbe4f26551c7dad99e
